project (LameVST CXX)

set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(CMAKE_COMPILER_IS_GNUCXX)
	set(MYFLAGS "-std=c++11 -Wall -Wextra -Wconversion -pedantic")
    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${MYFLAGS}")
    set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} ${MYFLAGS}")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

set(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../LameVST_DLL")

include_directories (${CMAKE_CURRENT_SOURCE_DIR}/..)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../ SOURCES)

add_library(${PROJECT_NAME}  SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} VST_SDK mp3lame)
